fix: adjust table spacing

--- a/index.css
+++ b/index.css
@@ -166,7 +166,7 @@ main .sections section:nth-of-type(3) {
 .sections section:nth-child(2) .date-month-year h3 {
   font-family: Poppins;
   font-weight: normal;
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   line-height: 2.4rem;
   color: var(--calendar-title);
 }
@@ -187,32 +187,36 @@ main .sections section:nth-of-type(3) {
 .sections section:nth-child(2) .date-days table {
   text-align: center;
   border-collapse: separate;
-  border-spacing: 4px 4px;
+  border-spacing: 2px 6px;
+}
+
+.sections section:nth-child(2) .date-days table thead tr th {
+  width: 28px;
 }
 
 .sections section:nth-child(2) .date-days table thead tr th,
 .sections section:nth-child(2) .date-days table tbody tr td {
   font-family: Poppins;
   font-weight: normal;
-  font-size: 1.2rem;
+  font-size: 1rem;
   padding: 1px 2px;
   color: var(--calendar-dates);
 }
 
 .sections section:nth-child(2) .date-days table tbody tr td div {
   border: 1px solid;
-  width: 20px;
-  height: 20px;
+  width: 18px;
+  height: 18px;
   text-align: center;
-  line-height: 18px;
+  line-height: 16px;
   margin: 0 auto;
 }
 
 .sections section:nth-child(2) .hour-picker {
-  width: 104px;
+  width: 100px;
   background-color: var(--hour-picker-background);
   border-radius: 0 4px 4px 0;
-  padding: 0.6rem 0;
+  padding: 0.9rem 0;
 }
 
 .sections section:nth-child(2) .hour-picker ol {
